docs: Improve README
Close #5